server/crates/djinn-agent/src/extension/tests/snapshots/djinn_agent__extension__tests__schema_snapshot_tests__architect_tool_names.snap
---
source: crates/djinn-agent/src/extension/tests/schema_snapshot_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "code_search",
  "skill_read",
  "lsp",
  "code_graph",
  "pr_review_context",
  "ci_job_log",
  "github_search",
  "output_view",
  "output_grep",
  "task_create",
  "task_update",
  "task_blocked_list",
  "epic_show",
  "epic_update",
  "epic_tasks",
  "epic_close",
  "epic_create",
  "task_transition",
  "task_comment_add",
  "memory_build_context",
  "memory_health",
  "memory_extracted_audit",
  "memory_broken_links",
  "memory_orphans",
  "agent_metrics",
  "agent_create",
  "memory_write",
  "memory_edit",
  "memory_move",
  "task_delete_branch",
  "task_archive_activity",
  "task_reset_counters",
  "task_kill_session",
  "submit_work"
]
