server/crates/djinn-agent/src/extension/tests/snapshots/djinn_agent__extension__tests__schema_snapshot_tests__code_graph_tool_schema.snap
---
source: crates/djinn-agent/src/extension/tests/schema_snapshot_tests.rs
expression: "serde_json::to_value(tool_code_graph()).unwrap()"
---
{
  "name": "code_graph",
  "description": "Query the SCIP-built repository dependency graph. Resolve exact nodes with `uid` when available; fallback to `name` + `file_path` + `kind` when a UID is unavailable; ambiguous names return ranked candidates. Agent-boundary traversal triage controls: `limit`, `offset`, `pageLimit`, `summaryOnly`, `byDepthCounts`. Partial pages and capped summaries are triage views; absence from a page or summary is NOT evidence a node/edge/pair is absent from the full graph. WHEN TO USE: capabilities = cheap discovery of supported ops/params/defaults before spending graph budget; query_subgraph = ask a natural-language question in `query` and get a token-budgeted focused subgraph with narrowing hints; search = find candidate files/symbols by substring when you do not know a key; describe = inspect one exact file/symbol key; neighbors = direct callers/callees/imports around a known key; impact = bounded transitive dependents for what-breaks-if-this-changes; context = compact bucketed incoming/outgoing context for a symbol; ranked/cycles/orphans/path/edges = broader structural queries; symbols_at/diff_touches/detect_changes = line range to touched symbols; status/metrics_at/snapshot/workspaces = graph health/introspection; api_surface/dead_symbols/deprecated_callers = public surface health; boundary_check/blast_radius/touches_hot_path = change-impact analysis; hotspots/cochange/churn/coupling_hubs = git-coupling × PageRank centrality; complexity/refactor_candidates = budget-conscious discovery of risky/refactorable code. AFTER THIS: after capabilities call the chosen op with only required fields; after query_subgraph inspect returned seeds/budget/truncation and retry with context_filter, file_filter, edge_filters, max_depth/max_seeds, or token_budget if too broad; after search pass a returned key to describe, neighbors, context, or impact; after describe call neighbors or context for relationships, or impact for dependents; after neighbors call describe on important nodes or impact to expand beyond direct edges; after impact call blast_radius or boundary_check for review/test planning; after context call describe/impact on highlighted neighbors.",
  "inputSchema": {
    "type": "object",
    "required": [
      "operation",
      "project"
    ],
    "properties": {
      "operation": {
        "type": "string",
        "enum": [
          "neighbors",
          "ranked",
          "impact",
          "implementations",
          "search",
          "query_subgraph",
          "cycles",
          "orphans",
          "path",
          "edges",
          "symbols_at",
          "diff_touches",
          "detect_changes",
          "describe",
          "context",
          "api_surface",
          "boundary_check",
          "blast_radius",
          "hotspots",
          "complexity",
          "refactor_candidates",
          "cochange",
          "churn",
          "coupling_hubs",
          "metrics_at",
          "dead_symbols",
          "deprecated_callers",
          "touches_hot_path",
          "status",
          "snapshot",
          "workspaces",
          "capabilities"
        ],
        "description": "Graph query to perform. Start with capabilities for cheap supported-op discovery; use query_subgraph with natural-language query for a focused token-budgeted subgraph; use search when you need a key, describe/context for one key, neighbors for direct edges, and impact for bounded transitive dependents."
      },
      "project": {
        "type": "string",
        "description": "Project slug (owner/repo) or UUID. The handler resolves it to the server-managed clone path."
      },
      "workspace": {
        "type": "string",
        "description": "Optional workspace slug. Empty string is treated as omitted. Use operation=workspaces to enumerate available slugs and metadata (name/node_count/commit_sha/warmed_at/status). Known workspaces hard-scope listing/bounded ops (ranked/orphans/snapshot/api_surface) and scope only seed/endpoint resolution for traversal ops (impact/path/touches_hot_path/blast_radius) so cross-workspace edges remain visible. Unknown non-empty slugs return unscoped results with workspace_hint available-workspace candidates where supported."
      },
      "key": {
        "type": "string",
        "description": "Node key: file path or SCIP symbol string (required for neighbors, impact, implementations, describe)"
      },
      "direction": {
        "type": "string",
        "enum": [
          "incoming",
          "outgoing"
        ],
        "description": "Edge direction filter for neighbors (omit for both)"
      },
      "kind_filter": {
        "type": "string",
        "enum": [
          "file",
          "symbol"
        ],
        "description": "Node kind filter for ranked/search/cycles/orphans and query_subgraph seed/traversal narrowing"
      },
      "limit": {
        "type": "integer",
        "minimum": 1,
        "description": "Max results (ranked/search/orphans/edges) or max traversal depth (impact)"
      },
      "query": {
        "type": "string",
        "description": "Substring query for search, or the required natural-language question for operation='query_subgraph'. After search, feed returned keys to describe, neighbors, context, or impact."
      },
      "context_filter": {
        "type": "string",
        "description": "Optional coarse subsystem/API/type/concern substring for operation='query_subgraph'. Use returned narrowing_hints to choose values when the first response is too broad."
      },
      "file_filter": {
        "type": "string",
        "description": "Optional repository-relative path/file substring for operation='query_subgraph'. Narrows seed selection and traversal; file_glob is also accepted as a compatibility alias."
      },
      "edge_filters": {
        "type": "array",
        "description": "Optional explicit edge kinds for operation='query_subgraph' traversal (for example calls, imports, returns, reads, writes, implements, extends). Omit to let the planner infer useful kinds from query; edge_kind is accepted as a single-kind alias.",
        "items": {
          "type": "string"
        }
      },
      "token_budget": {
        "type": "integer",
        "minimum": 1,
        "description": "Approximate response token budget for operation='query_subgraph'. Omit for backend default (~2000); positive values clamp to 1024..=32000 and the response reports budget/truncation state plus narrowing_hints."
      },
      "max_seeds": {
        "type": "integer",
        "minimum": 1,
        "description": "Maximum seed count for operation='query_subgraph'. Omit for backend default (~6); positive values clamp to 1..=32. Seed debug metadata explains which seeds were selected."
      },
      "from": {
        "type": "string",
        "description": "Source node for path"
      },
      "to": {
        "type": "string",
        "description": "Destination node for path"
      },
      "from_glob": {
        "type": "string",
        "description": "Source path glob for edges"
      },
      "to_glob": {
        "type": "string",
        "description": "Destination path glob for edges"
      },
      "min_size": {
        "type": "integer",
        "minimum": 2,
        "description": "Minimum SCC size for cycles (default 2)"
      },
      "visibility": {
        "type": "string",
        "enum": [
          "public",
          "private",
          "any"
        ],
        "description": "Visibility filter for orphans (default any)"
      },
      "sort_by": {
        "type": "string",
        "enum": [
          "pagerank",
          "in_degree",
          "out_degree",
          "total_degree",
          "cognitive",
          "cyclomatic",
          "nloc",
          "max_nesting",
          "param_count"
        ],
        "description": "Sort key. For ranked: pagerank|in_degree|out_degree|total_degree (default pagerank). For complexity: cognitive|cyclomatic|nloc|max_nesting|param_count (default cognitive)."
      },
      "target": {
        "type": "string",
        "enum": [
          "functions",
          "files"
        ],
        "description": "Target tier for complexity (default functions). 'files' aggregates by file_path."
      },
      "tests": {
        "type": "string",
        "enum": [
          "include",
          "exclude",
          "only"
        ],
        "description": "Test-file filter for snapshot: include (default, whole graph), exclude (drop test files/symbols), only (test nodes only). Uses the canonical is_test classification (file-path convention OR SCIP Test role)."
      },
      "group_by": {
        "type": "string",
        "enum": [
          "file"
        ],
        "description": "Group impact/neighbors results by file"
      },
      "max_depth": {
        "type": "integer",
        "minimum": 0,
        "description": "Maximum depth for path, or operation='query_subgraph' traversal depth from selected seeds (0 = seed nodes only; clamped to 0..=8 for query_subgraph)"
      },
      "edge_kind": {
        "type": "string",
        "description": "Edge-kind filter for edges; for query_subgraph, a single-kind compatibility alias when edge_filters is omitted"
      },
      "file": {
        "type": "string",
        "description": "Repository-relative file path (required for symbols_at)"
      },
      "start_line": {
        "type": "integer",
        "minimum": 1,
        "description": "1-indexed inclusive start line (required for symbols_at)"
      },
      "end_line": {
        "type": "integer",
        "minimum": 1,
        "description": "1-indexed inclusive end line for symbols_at (defaults to start_line)"
      },
      "changed_ranges": {
        "type": "array",
        "description": "List of changed line ranges for diff_touches (parsed from `git diff --unified=0 base..head`)",
        "items": {
          "type": "object",
          "required": [
            "file",
            "start_line"
          ],
          "properties": {
            "file": {
              "type": "string",
              "description": "Repository-relative path of the changed file"
            },
            "start_line": {
              "type": "integer",
              "minimum": 1,
              "description": "1-indexed inclusive first line of the hunk"
            },
            "end_line": {
              "type": "integer",
              "minimum": 1,
              "description": "1-indexed inclusive last line of the hunk (defaults to start_line)"
            }
          }
        }
      },
      "module_glob": {
        "type": "string",
        "description": "File-path glob restricting api_surface to a subset of symbols"
      },
      "confidence": {
        "type": "string",
        "enum": [
          "high",
          "med",
          "low"
        ],
        "description": "Confidence tier for dead_symbols (default high)"
      },
      "window_days": {
        "type": "integer",
        "minimum": 1,
        "description": "Churn look-back window in days for hotspots (default 90, clamped to 365)"
      },
      "file_glob": {
        "type": "string",
        "description": "File-path glob restricting hotspots to a subset of files; for query_subgraph, compatibility alias for file_filter"
      },
      "rules": {
        "type": "array",
        "description": "Boundary rules for boundary_check. Every submitted rule is treated as a forbidden edge; matching edges are reported as violations.",
        "items": {
          "type": "object",
          "required": [
            "from_glob",
            "to_glob"
          ],
          "properties": {
            "from_glob": {
              "type": "string",
              "description": "Source path glob"
            },
            "to_glob": {
              "type": "string",
              "description": "Destination path glob"
            }
          }
        }
      },
      "seed_entries": {
        "type": "array",
        "description": "Entry-point SCIP symbol keys for touches_hot_path",
        "items": {
          "type": "string"
        }
      },
      "seed_sinks": {
        "type": "array",
        "description": "Sink SCIP symbol keys for touches_hot_path",
        "items": {
          "type": "string"
        }
      },
      "symbols": {
        "type": "array",
        "description": "Queried symbol keys for touches_hot_path",
        "items": {
          "type": "string"
        }
      },
      "mode": {
        "type": "string",
        "enum": [
          "name",
          "hybrid"
        ],
        "description": "Search mode for the `search` op (PR B4). `name` runs the canonical-graph name index only (fast path); `hybrid` blends lexical + semantic + structural via RRF k=60 and stamps each hit with a `match_kind` tag for debug surfaces. Default reads `DJINN_CODE_GRAPH_SEARCH_DEFAULT_MODE` (env var; defaults to `name`)."
      }
    }
  }
}
