server/crates/djinn-agent/src/extension/tests/snapshots/djinn_agent__extension__tests__schema_snapshot_tests__reviewer_tool_names.snap
---
source: crates/djinn-agent/src/extension/tests/schema_snapshot_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "skill_read",
  "lsp",
  "ci_job_log",
  "github_search",
  "github_fetch_file",
  "output_view",
  "output_grep",
  "memory_build_context",
  "submit_review"
]
