server/crates/djinn-agent/src/extension/tests/snapshots/djinn_agent__extension__tests__schema_snapshot_tests__worker_tool_names.snap
---
source: crates/djinn-agent/src/extension/tests/schema_snapshot_tests.rs
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "lsp",
  "ci_job_log",
  "github_search",
  "github_fetch_file",
  "output_view",
  "output_grep",
  "write",
  "edit",
  "apply_patch",
  "memory_build_context",
  "memory_write",
  "memory_edit",
  "request_lead",
  "submit_work"
]
